added extra pages

--- a/about.html
+++ b/about.html
@@ -42,8 +42,8 @@
     <!-- Hero Section -->
     <header class="hero d-flex align-items-center justify-content-center text-center text-white">
         <div>
-            <h1 class="fade-in">Welcome to Jakob Designs</h1>
-            <p class="fade-in delay">Your media innovation partner.</p>
+            <h1 class="fade-in">About us</h1>
+            <p class="fade-in delay">our visons, dreams and goals.</p>
         </div>
     </header>
     
@@ -80,6 +80,3 @@
     <script src="./js/main.js"></script>
 </body>
 </html>
-
-
-
