--- a/contact.html
+++ b/contact.html
@@ -42,23 +42,10 @@
     <!-- Hero Section -->
     <header class="hero d-flex align-items-center justify-content-center text-center text-white">
         <div>
-            <h1 class="fade-in">Welcome to Jakob Designs</h1>
-            <p class="fade-in delay">Your media innovation partner.</p>
+            <h1 class="fade-in">Contact us</h1>
+            <p class="fade-in delay">contact form bellow.</p>
         </div>
     </header>
-    
-    <!-- About Section -->
-    <section id="about" class="container py-5">
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <img src="logo.png" class="img-fluid" alt="Company Logo">
-            </div>
-            <div class="col-md-6">
-                <h2>About Us</h2>
-                <p>We specialize in digital media solutions that elevate your brand.</p>
-            </div>
-        </div>
-    </section>
     
     <!-- Contact Section -->
     <section id="contact" class="bg-light py-5">
@@ -80,6 +67,3 @@
     <script src="./js/main.js"></script>
 </body>
 </html>
-
-
-
