--- a/about.html
+++ b/about.html
@@ -51,24 +51,12 @@
     <section id="about" class="container py-5">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="logo.png" class="img-fluid" alt="Company Logo">
+                <img src="./images/logo.jpeg" class="img-fluid" alt="Company Logo">
             </div>
             <div class="col-md-6">
                 <h2>About Us</h2>
-                <p>We specialize in digital media solutions that elevate your brand.</p>
+                <p>At Jakob Desgins, we are passionate about pushing the boundaries of media design. With a team of creative professionals dedicated to storytelling through stunning visuals, we bring brands to life with compelling video production, motion graphics, and digital content. Our mission is to create impactful designs that engage, inspire, and leave a lasting impression. Whether you're a startup or an established brand, we are here to turn your ideas into visually striking realities.</p>
             </div>
-        </div>
-    </section>
-    
-    <!-- Contact Section -->
-    <section id="contact" class="bg-light py-5">
-        <div class="container text-center">
-            <h2>Contact Us</h2>
-            <form>
-                <input type="text" class="form-control my-2" placeholder="Enter Your Name" required>
-                <input type="email" class="form-control my-2" placeholder="Enter Your Email" required>
-                <button class="btn btn-black rounded-pill">Send Message</button>
-            </form>
         </div>
     </section>
     
