--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
     <section id="contact" class="bg-light py-5">
         <div class="container text-center">
             <h2>Contact Us</h2>
+            <p>Lets bring your vision to life! Whether you have a project in mind or just want to learn more about our services, we would love to hear from you. Reach out to us today and lets create something amazing together. Fill out the form below, email us at j.desgins@email.com, or give us a call at 666-666-6666. We cannot wait to collaborate with you!. Or Hit the contact button bellow</p>
             <form>
                 <input type="text" class="form-control my-2" placeholder="Enter Your Name" required>
                 <input type="email" class="form-control my-2" placeholder="Enter Your Email" required>
