--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                             <li><a class="dropdown-item" href="./about.html">About</a></li>
                             <li><a class="dropdown-item" href="./index.html">Home</a></li>
                             <li><a class="dropdown-item" href="./contact.html">Contact</a></li>
+                            <li><a class="dropdown-item" href="./bio.html">Bio</a></li>
                         </ul>
                     </li>
                 </ul>
